Make some bugs fix

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1005,7 +1005,13 @@ body.apply footer {
   font-weight: 700;
   text-transform: uppercase;
   margin-top: 8px;
-  margin-left: 40px;
+  margin-left: 20px;
+  margin-right: 24px;
+  display: block;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  min-height: 24px;
 }
 
 .product-card__img-wrapper {
@@ -1045,7 +1051,8 @@ body.apply footer {
 }
 
 .product-card__prescription {
-  margin-left: 40px;
+  margin: 0;
+  margin-left: 20px;
 }
 
 .product-card__link {
@@ -2097,6 +2104,61 @@ body.attention .container {
 }
 
 /* =>> adaptation */
+
+.ae-section {
+  font-size: 16px;
+  margin-bottom: 32px;
+}
+
+.ae-section a:hover {
+  text-decoration: underline;
+}
+
+.ae-section>*:first-child {
+  font-size: 24px;
+}
+
+.ae-section dt {
+  margin-bottom: 4px;
+  font-size: 16px;
+  font-weight: 300;
+  text-transform: uppercase;
+  font-weight: normal;
+}
+
+.ae-section dl strong {
+  font-weight: normal;
+  color: #DE3B21;
+}
+
+.ae-section dd {
+  margin: 0;
+  margin-bottom: 8px;
+}
+
+.ae-section dd a {
+  text-decoration: none;
+  font-size: 18px;
+  color: #337ab7;
+}
+
+.ae-section form {
+  margin: 32px auto;
+  max-width: 800px;
+}
+
+.ae-section h3 {
+  font-size: 16px;
+  font-weight: 300;
+  text-transform: uppercase;
+  font-weight: normal;
+}
+
+.ae-link {
+  text-decoration: none;
+  color: #337ab7;
+  font-weight: bold;
+}
 
 /* main search */
 .search-result-list {
